fix the "GRWC" text on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -261,7 +261,7 @@
 @media (max-width: 480px) {
     .footer::after {
         font-size: 120px;
-        top: 100%;
+        top: 50%;
     }
 }
 
